<resources>
    <string name="app_name">Apk Popper</string>
    <string name="app_logo_description">App Logo</string>
    <string name="app_description">an open-source installed apk info extractor &amp; apk itself</string>
    <string name="image_refresh_description">Image Refresh</string>
    <string name="tab1_all_apps">System Apps</string>
    <string name="tab2_installed_apps">Installed Apps</string>
    <string name="tab3_setting">Settings</string>
    <string name="app_details_activity_image">Detail App Image</string>
    <string name="app_details_extract_button">Extract</string>
    <string name="app_version_no">Version No</string>
    <string name="app_version_code">Version Code</string>
    <string name="app_installed_date">Installed Date</string>
    <string name="app_installed_location">Installed Location</string>
    <string name="app_last_update">Last Update</string>
    <string name="app_apk_size">Application Size</string>
    <string name="app_mime">MIME</string>
    <string name="app_targetsdk">Target SDK</string>
    <string name="app_min_sdk">Min SDK</string>
    <string name="app_max_sdk">Max SDK</string>
    <string name="app_compiled_sdk">Compiled SDK</string>
    <string name="app_compiled_sdk_code">Compiled SDK Code</string>
    <string name="app_openGLEVersion">OpenGL ES Version</string>
    <string name="app_platform_build_version">Platform Build Version</string>
    <string name="app_uses_features_">Uses Features</string>
    <string name="app_dex_class">DexClass</string>
    <string name="app_manifest">Manifest</string>
    <string name="app_permission">Permissions</string>
    <string name="app_see_more">See More..</string>
    <string name="app_grid">Grid Size</string>
    <string name="app_grid_info">change icon grid sizes</string>
    <string name="app_save_directory">Save Directory</string>
    <string name="app_apk_file_save_format">APK File Save Format</string>
    <string name="app_apk_file_save_format_info">manage saved apk file name format</string>
    <string name="app_app_version">App Version</string>
    <string name="app_about_us">About Us</string>
    <string name="app_tutorial">Show Tutorial</string>
    <string name="app_privacyPolicy">Privacy Policy</string>
    <string name="app_about_us_full_details">This app help users to extract apk which are installed in your device. It will list all system app (default) and installed app (which you installed). It will save in a specific location which you can check in setting tab. Super fast extract file with some customization filename. If your are nerd this system also extract details about app like permission, manifest file etc.\n\nThis app is an opensource so, you can easily find us in our github repository which is listed below. If you want to post issue or want to add features you can directly create issue in github. \n\nChEErs!! :)</string>
    <string name="app_rate_us">Rate Us</string>
    <string name="app_rate_us_info">give us stars in app store</string>
    <string name="app_license">License &amp; Credits</string>

    <string name="lorem_string_word_10">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc elementum.</string>

    <string name="app_apk_packageName">Package Name</string>
    <string name="app_apk_VersionNo">Version No</string>
    <string name="app_apk_VersionCode">Version Code</string>
    <string name="app_apk_ExtractDate">Date</string>

    <string name="key_preference_file_key">pref_key_file</string>
    <string name="key_preference_file_key_Grid">pref_key_file_Grid</string>

    <string name="key_preference_file_key_packageName">pref_key_file_PackageName</string>
    <string name="key_preference_file_key_versionNo">pref_key_file_VersionNo</string>
    <string name="key_preference_file_key_versionCode">pref_key_file_VersionCode</string>
    <string name="key_preference_file_key_date">pref_key_file_VersionDate</string>

    <string name="key_preference_file_key_mainIntro">pref_key_file_MainIntro</string>
</resources>
