<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/gridSizeBtn"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="@dimen/app_details_row_padding"
                android:paddingRight="@dimen/app_details_row_padding">

                <TextView
                    android:id="@+id/gridSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/app_grid"
                    android:textColor="#666"
                    android:textSize="14sp"
                    app:fontFamily="@font/robotoregular"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.262" />

                <TextView
                    android:id="@+id/text_gridSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="start"
                    android:text="@string/app_grid_info"
                    android:textColor="#666"
                    android:textSize="12sp"
                    app:fontFamily="@font/roboto_light"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.628"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.7" />


            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#e6e6e6" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="@dimen/app_details_row_padding"
                android:paddingRight="@dimen/app_details_row_padding">

                <TextView
                    android:id="@+id/FolderPath"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/app_save_directory"
                    android:textColor="#666"
                    android:textSize="14sp"
                    app:fontFamily="@font/robotoregular"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.262" />

                <TextView
                    android:id="@+id/text_folderPath"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="start"
                    android:text="@string/app_save_directory"
                    android:textColor="#666"
                    android:textSize="12sp"
                    app:fontFamily="@font/roboto_light"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.628"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.7" />


            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#e6e6e6" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/apk_file_save_format_btn"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="@dimen/app_details_row_padding"
                android:paddingRight="@dimen/app_details_row_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/app_apk_file_save_format"
                    android:textColor="#666"
                    android:textSize="14sp"
                    app:fontFamily="@font/robotoregular"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.262" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="start"
                    android:text="@string/app_apk_file_save_format_info"
                    android:textColor="#666"
                    android:textSize="12sp"
                    app:fontFamily="@font/roboto_light"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.628"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.7" />


            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#e6e6e6" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="@dimen/app_details_row_padding"
                android:paddingRight="@dimen/app_details_row_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/app_rate_us"
                    android:textColor="#666"
                    android:textSize="14sp"
                    app:fontFamily="@font/robotoregular"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.262" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="start"
                    android:text="@string/app_rate_us_info"
                    android:textColor="#666"
                    android:textSize="12sp"
                    app:fontFamily="@font/roboto_light"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.628"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.7" />


            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#e6e6e6" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="@dimen/app_details_row_padding"
                android:paddingRight="@dimen/app_details_row_padding">

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/app_app_version"
                    android:textColor="#666"
                    android:textSize="14sp"
                    app:fontFamily="@font/robotoregular"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_appVersion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="end"
                    android:text="@string/app_app_version"
                    android:textColor="#666"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto_light"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/version"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#e6e6e6" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/licenseBtn"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="@dimen/app_details_row_padding"
                android:paddingRight="@dimen/app_details_row_padding">

                <TextView
                    android:id="@+id/license"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/app_license"
                    android:textColor="#666"
                    android:textSize="14sp"
                    app:fontFamily="@font/robotoregular"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#e6e6e6" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/aboutusBtn"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="@dimen/app_details_row_padding"
                android:paddingRight="@dimen/app_details_row_padding">

                <TextView
                    android:id="@+id/aboutus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/app_about_us"
                    android:textColor="#666"
                    android:textSize="14sp"
                    app:fontFamily="@font/robotoregular"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#e6e6e6" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>